<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsFragment">

    <LinearLayout
        android:id="@+id/input_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="12dp"
        android:paddingTop="12dp"
        android:paddingEnd="12dp"
        android:paddingBottom="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/sets_label_card_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sets_label_card_num"
            android:textColor="@color/input_label"
            android:textSize="@dimen/sets_label_text_size" />

        <EditText
            android:id="@+id/setsEditTextCardNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/sets_input_card_num_hint"
            android:inputType="numberDecimal"
            android:maxLength="19"
            android:singleLine="true"
            android:textSize="@dimen/sets_input_text_size" />

        <TextView
            android:id="@+id/sets_label_card_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sets_label_card_name"
            android:textColor="@color/input_label"
            android:textSize="@dimen/sets_label_text_size" />

        <EditText
            android:id="@+id/setsEditTextCardHolder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/sets_input_card_holder_hint"
            android:inputType="textPersonName"
            android:maxLength="40"
            android:singleLine="true"
            android:textSize="@dimen/sets_input_text_size" />

        <TextView
            android:id="@+id/sets_label_card_valid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sets_label_card_valid_thru"
            android:textColor="@color/input_label"
            android:textSize="@dimen/sets_label_text_size" />

        <EditText
            android:id="@+id/setsEditTextCardValidThru"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date"
            android:singleLine="true"
            android:textSize="@dimen/sets_input_text_size" />

        <TextView
            android:id="@+id/sets_label_card_cvv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sets_label_card_cvv"
            android:textColor="@color/input_label"
            android:textSize="@dimen/sets_label_text_size" />

        <EditText
            android:id="@+id/setsEditTextCardCvv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/sets_input_card_cvv_hint"
            android:inputType="numberDecimal"
            android:maxLength="3"
            android:singleLine="true"
            android:textSize="@dimen/sets_input_text_size" />

        <Switch
            android:id="@+id/setsSwRequest"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingTop="25dp"
            android:switchMinWidth="@dimen/sets_switch_selector_width"
            android:text="@string/sets_sw_send_req"
            android:textColor="@color/switch_color_off"
            android:textSize="@dimen/sets_switch_text_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="40dp">

            <Button
                android:id="@+id/sets_b_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:background="@drawable/shape_button_save"
                android:text="@string/sets_b_save"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/sets_b_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:background="@drawable/shape_button_cancel"
                android:text="@string/sets_b_cancel"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>